--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   db:
     image: mysql:5.7
+    container_name: "db_mysql"
     environment:
       MYSQL_USER: ${mysql_user}
       MYSQL_ROOT_PASSWORD: ${mysql_root_password}
@@ -9,6 +10,7 @@ services:
       - ./db_data:/var/lib/mysql
   web:
     build: .
+    container_name: "web_rails"
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - ./myapp:/myapp
