--- a/myapp/test/fixtures/productes.yml
+++ b/myapp/test/fixtures/productes.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
-  user_id: 1
+  product_name: MyString
 
 two:
-  content: MyText
-  user_id: 1
+  product_name: MyString
