--- a/myapp/test/fixtures/users.yml
+++ b/myapp/test/fixtures/users.yml
@@ -2,12 +2,10 @@
 
 one:
   user_name: MyString
-  password: MyString
   email: MyString
-  generation: MyString
+  generation: 1
 
 two:
   user_name: MyString
-  password: MyString
   email: MyString
-  generation: MyString
+  generation: 1
