--- a/web_rails/myapp/Gemfile
+++ b/web_rails/myapp/Gemfile
@@ -10,6 +10,9 @@ gem 'mysql2', '>= 0.3.18', '< 0.6.0'
 gem 'puma', '~> 3.7'
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
+gem 'rails-i18n'
+gem 'rails-ujs'
+gem 'jp_prefecture'
 
 gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
