--- a/web_rails/myapp/Gemfile
+++ b/web_rails/myapp/Gemfile
@@ -23,6 +23,7 @@ gem 'bootstrap-sass', '~> 3'
 gem 'bcrypt', '3.1.7'
 gem 'jquery-rails' 
 gem 'jquery-ui-rails'
+gem 'counter_culture'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
