[Add] Gemfile nested_form_fields

--- a/web_rails/myapp/Gemfile
+++ b/web_rails/myapp/Gemfile
@@ -15,6 +15,7 @@ gem 'rails-ujs'
 gem 'jp_prefecture'
 gem 'carrierwave'
 gem 'rmagick'
+gem 'nested_form_fields'
 
 gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
