--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - ./db_mysql/db_data:/var/lib/mysql
   web:
+    tty: true
+    stdin_open: true
     build: ./web_rails
     container_name: "web_rails"
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
