[Add] 観光地登録時に詳細を記入できる機能を作成

--- a/web_rails/myapp/Gemfile
+++ b/web_rails/myapp/Gemfile
@@ -16,6 +16,7 @@ gem 'jp_prefecture'
 gem 'carrierwave'
 gem 'rmagick'
 gem 'nested_form_fields'
+gem 'trix'
 
 gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
