--- a/web_rails/Dockerfile
+++ b/web_rails/Dockerfile
@@ -1,7 +1,19 @@
 FROM ruby:2.5
 
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update -qq \
+&& apt install -y build-essential libpq-dev nodejs \
+&& apt-get install -y locales \
+&& apt-get install -y fonts-ipafont
+
+#日本語設定
+RUN echo "ja_JP.UTF-8 UTF-8" > /etc/locale.gen \
+&& locale-gen ja_JP.UTF-8 \
+&& dpkg-reconfigure locales \
+&& /usr/sbin/update-locale LANG=ja_JP.UTF-8
 ENV TZ='Asia/Tokyo'
-RUN apt-get update -qq && apt install -y build-essential libpq-dev nodejs
+ENV LC_ALL ja_JP.UTF-8
+
 RUN mkdir /myapp
 
 WORKDIR /myapp
