--- a/web_rails/myapp/Gemfile
+++ b/web_rails/myapp/Gemfile
@@ -20,6 +20,7 @@ gem 'trix'
 gem 'wicked_pdf'
 gem 'wkhtmltopdf-binary'
 gem 'kaminari', '~> 0.17.0'
+gem 'kaminari-bootstrap', '~> 3.0.1'
 
 gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
