--- a/web_rails/myapp/config/database.yml
+++ b/web_rails/myapp/config/database.yml
@@ -9,3 +9,9 @@ default: &default
 development:
   <<: *default
   database: myapp_development
+
+production:
+  <<: *default
+  adapter: mysql2
+  database: myapp_development
+  pool: 5
