[change]psqlのデータが永続化されてなｋったので修正した

--- a/db_psql/Dockerfile
+++ b/db_psql/Dockerfile
@@ -1,4 +1,5 @@
 FROM postgres
 
 ENV TZ='Asia/Tokyo'
-#ADD my.cnf /etc/mysql/conf.d
+RUN localedef -i ja_JP -c -f UTF-8 -A /usr/share/locale/locale.alias ja_JP.UTF-8
+ENV LANG ja_JP.utf8
