--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_USER: ${psql_user}
       POSTGRES_PASSWORD: ${psql_root_password}
     volumes:
-      - ./db_psql/db_data:/var/lib/postgresql
+      - psql_db_data:/var/lib/postgresql/data
   web:
     tty: true
     stdin_open: true
@@ -20,3 +20,5 @@ services:
       - "3000:3000"
     depends_on:
       - db
+volumes:
+  psql_db_data:
