--- a/web_rails/myapp/Gemfile
+++ b/web_rails/myapp/Gemfile
@@ -22,6 +22,8 @@ gem 'wkhtmltopdf-binary'
 gem 'kaminari', '~> 0.17.0'
 gem 'kaminari-bootstrap', '~> 3.0.1'
 gem 'remotipart'
+gem 'leaflet-rails'
+gem 'geocoder'
 
 gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
