--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ web_rails/myapp/public/uploads/spots/*
 web_rails/myapp/public/uploads/users/*
 web_rails/myapp/public/uploads/tmp/*
 web_rails/myapp/public/uploads/comment/*
+web_rails/myapp/public/uploads/shops/*
