--- a/web_rails/myapp/Gemfile
+++ b/web_rails/myapp/Gemfile
@@ -24,6 +24,8 @@ gem 'kaminari-bootstrap', '~> 3.0.1'
 gem 'remotipart'
 gem 'leaflet-rails'
 gem 'geocoder'
+gem 'bootstrap3-datetimepicker-rails'
+gem 'momentjs-rails'
 
 gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
